@@ -71,6 +71,7 @@ import org.hisp.dhis.category.CategoryOptionGroupSet;
 import org.hisp.dhis.common.BaseDimensionalObject;
 import org.hisp.dhis.common.CombinationGenerator;
 import org.hisp.dhis.common.DataDimensionItemType;
+import org.hisp.dhis.common.DateRange;
 import org.hisp.dhis.common.DhisApiVersion;
 import org.hisp.dhis.common.DimensionItemKeywords;
 import org.hisp.dhis.common.DimensionItemObjectValue;
@@ -104,12 +105,12 @@ import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.program.ProgramTrackedEntityAttributeDimensionItem;
 import org.hisp.dhis.system.util.MathUtils;
 import org.hisp.dhis.user.User;
+import org.hisp.dhis.util.DateUtils;
 import org.hisp.dhis.util.ObjectUtils;
 import org.springframework.util.Assert;
 
 import com.google.common.base.MoreObjects;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 
 /**
@@ -194,13 +195,13 @@ public class DataQueryParams
 
     public static final int NUMERATOR_DENOMINATOR_PROPERTIES_COUNT = 5;
 
-    public static final ImmutableSet<Class<? extends IdentifiableObject>> DYNAMIC_DIM_CLASSES = ImmutableSet.of(
+    public static final Set<Class<? extends BaseDimensionalObject>> DYNAMIC_DIM_CLASSES = Set.of(
         OrganisationUnitGroupSet.class, DataElementGroupSet.class, CategoryOptionGroupSet.class, Category.class );
 
-    private static final ImmutableSet<String> DIMENSION_PERMUTATION_IGNORE_DIMS = ImmutableSet.of(
+    private static final Set<String> DIMENSION_PERMUTATION_IGNORE_DIMS = Set.of(
         DATA_X_DIM_ID, CATEGORYOPTIONCOMBO_DIM_ID );
 
-    public static final ImmutableSet<DimensionType> COMPLETENESS_DIMENSION_TYPES = ImmutableSet.of(
+    public static final Set<DimensionType> COMPLETENESS_DIMENSION_TYPES = Set.of(
         DATA_X, PERIOD, ORGANISATION_UNIT, ORGANISATION_UNIT_GROUP_SET, CATEGORY_OPTION_GROUP_SET, CATEGORY );
 
     /**
@@ -358,9 +359,14 @@ public class DataQueryParams
     protected Date startDate;
 
     /**
-     * The end date fore the period dimension, can be null.
+     * The end date for the period dimension, can be null.
      */
     protected Date endDate;
+
+    /**
+     * The date range for the period dimension, can be empty.
+     */
+    protected List<DateRange> dateRangeList = new ArrayList<>();
 
     /**
      * The order in which the data values has to be sorted, can be null.
@@ -587,6 +593,7 @@ public class DataQueryParams
         params.approvalLevel = this.approvalLevel;
         params.startDate = this.startDate;
         params.endDate = this.endDate;
+        params.dateRangeList = this.dateRangeList;
         params.order = this.order;
         params.timeField = this.timeField;
         params.orgUnitField = this.orgUnitField;
@@ -666,6 +673,8 @@ public class DataQueryParams
             .add( "approvalLevel", approvalLevel )
             .add( "startDate", startDate )
             .add( "endDate", endDate )
+            .add( "dateRangeList", dateRangeList.stream()
+                .map( DateRange::toString ).collect( Collectors.joining( ":" ) ) )
             .add( "order", order )
             .add( "timeField", timeField )
             .add( "orgUnitField", orgUnitField )
@@ -673,7 +682,7 @@ public class DataQueryParams
             .addIgnoreNull( "apiVersion", apiVersion ).build();
     }
 
-    private String getDimensionalItemKeywords( final DimensionItemKeywords keywords )
+    private String getDimensionalItemKeywords( DimensionItemKeywords keywords )
     {
         if ( keywords != null )
         {
@@ -831,22 +840,6 @@ public class DataQueryParams
         if ( !filterPeriods.isEmpty() )
         {
             return ((Period) filterPeriods.get( 0 )).getPeriodType();
-        }
-
-        return null;
-    }
-
-    /**
-     * Returns the first period specified as filter, or null if there is no
-     * period filter.
-     */
-    public Period getFilterPeriod()
-    {
-        List<DimensionalItemObject> filterPeriods = getFilterPeriods();
-
-        if ( !filterPeriods.isEmpty() )
-        {
-            return (Period) filterPeriods.get( 0 );
         }
 
         return null;
@@ -1447,12 +1440,60 @@ public class DataQueryParams
     }
 
     /**
+     * Indicates whether this query has a nonempty dateRangeList.
+     */
+    public boolean hasDateRangeList()
+    {
+        return dateRangeList != null && !dateRangeList.isEmpty();
+    }
+
+    /**
+     * Indicates whether this query has a continuous or EMPTY dateRangeList. It
+     * assumes that the dateRangeList is sorted. It should happen in the
+     * EventQueryParam::replacePeriodsWithDates method.
+     */
+    public boolean hasContinuousDateRangeList()
+    {
+        if ( !hasDateRangeList() )
+        {
+            return true;
+        }
+
+        if ( dateRangeList.size() == 1 )
+        {
+            return true;
+        }
+
+        for ( int i = dateRangeList.size() - 1; i > 0; i-- )
+        {
+            boolean diffAboveOneDay = DateUtils.daysBetween( dateRangeList.get( i - 1 ).getEndDate(),
+                dateRangeList.get( i ).getStartDate() ) > 1;
+
+            if ( diffAboveOneDay )
+            {
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    /**
      * Indicates whether start and end date are specified and the start date is
      * after the end date, which is invalid.
      */
     public boolean startDateAfterEndDate()
     {
         return hasStartEndDate() && startDate.after( endDate );
+    }
+
+    /**
+     * Indicates whether any start date is after the end date, which is invalid.
+     */
+    public boolean startDatesAfterEndDates()
+    {
+        return hasDateRangeList() && dateRangeList.stream()
+            .anyMatch( drl -> drl.getStartDate().after( drl.getEndDate() ) );
     }
 
     /**
@@ -1974,10 +2015,10 @@ public class DataQueryParams
             List<String> keys = Lists.newArrayList( key.split( DIMENSION_SEP ) );
             keys.remove( DX_INDEX );
 
-            final Collection<DimensionItemObjectValue> dimensionItemObjectValues = aggregatedDataMap.get( key );
+            Collection<DimensionItemObjectValue> dimensionItemObjectValues = aggregatedDataMap.get( key );
 
             // Generate final permutation key
-            final String permKey = StringUtils.join( keys, DIMENSION_SEP );
+            String permKey = StringUtils.join( keys, DIMENSION_SEP );
 
             for ( DimensionItemObjectValue dimWithValue : dimensionItemObjectValues )
             {
@@ -2066,7 +2107,7 @@ public class DataQueryParams
     @Override
     public int hashCode()
     {
-        final int prime = 31;
+        int prime = 31;
         int result = 1;
         result = prime * result + ((dimensions == null) ? 0 : dimensions.hashCode());
         result = prime * result + ((filters == null) ? 0 : filters.hashCode());
@@ -2277,6 +2318,11 @@ public class DataQueryParams
         return endDate;
     }
 
+    public List<DateRange> getDateRangeList()
+    {
+        return dateRangeList;
+    }
+
     public SortOrder getOrder()
     {
         return order;
@@ -2461,7 +2507,7 @@ public class DataQueryParams
     public Set<DimensionalItemObject> getAllDataSets()
     {
         return getAllReportingRates().stream()
-            .map( r -> (ReportingRate) r )
+            .map( ReportingRate.class::cast )
             .map( ReportingRate::getDataSet )
             .collect( Collectors.toSet() );
     }
@@ -2520,7 +2566,7 @@ public class DataQueryParams
     public List<OrganisationUnit> getAllTypedOrganisationUnits()
     {
         return ImmutableList.copyOf( getAllOrganisationUnits().stream()
-            .map( ou -> (OrganisationUnit) ou )
+            .map( OrganisationUnit.class::cast )
             .collect( Collectors.toList() ) );
     }
 
@@ -2560,7 +2606,7 @@ public class DataQueryParams
      */
     public Set<IdentifiableObject> getProgramsInAttributesAndDataElements()
     {
-        final Set<IdentifiableObject> programs = new HashSet<>();
+        Set<IdentifiableObject> programs = new HashSet<>();
 
         getAllProgramAttributes().stream()
             .map( a -> (ProgramTrackedEntityAttributeDimensionItem) a )
@@ -2658,7 +2704,7 @@ public class DataQueryParams
      */
     public Period getStartEndDatesAsPeriod()
     {
-        final Period period = new Period();
+        Period period = new Period();
         period.setStartDate( getStartDate() );
         period.setEndDate( getEndDate() );
 
@@ -2676,7 +2722,7 @@ public class DataQueryParams
     {
         if ( getStartDate() != null && getEndDate() != null )
         {
-            final Period period = new Period();
+            Period period = new Period();
             period.setStartDate( getStartDate() );
             period.setEndDate( getEndDate() );
 
